<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_launcher_background"
            android:layout_gravity="center" />

<com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
     <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/correo_electronico"
            android:background="@color/white"
            android:inputType="textEmailAddress"/>
</com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:background="@color/white"
                android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>
  <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/iniciar_sesion"
          android:layout_marginTop="20dp"
          android:layout_margin="20dp"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="10dp"
        >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_tienes_cuenta"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registrate"
                android:layout_margin="10dp"/>

    </LinearLayout>


</LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>