<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_req_user"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".RegUserActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher_background" />

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/campo_reg_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/nombre"
                    android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/campo_reg_correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/correo_electronico"
                    android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/campo_reg_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/boton_crear_cuenta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/crear_cuenta" />


    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>